# libad9833

./: .gitignore  CMakeLists.txt  README.md
include/: AD9833.h  DEV_Config.h
src/: AD9833.c  DEV_Config.c  debug.h
test/: CMakeLists.txt  test.c
